<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_itenenary"
        android:icon="@drawable/ic_itenenary"
        android:title="@string/itenenary" />

    <item
        android:id="@+id/navigation_myjourney"
        android:icon="@drawable/ic_myjourney"
        android:title="@string/journey" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile" />
</menu>