<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkitcapstone.tipsntrip.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_itenenary"
        android:name="com.bangkitcapstone.tipsntrip.ui.itenerary.CreateIteneraryFragment"
        android:label="@string/itenenary"
        tools:layout="@layout/fragment_create_itenenary" />

    <fragment
        android:id="@+id/navigation_myjourney"
        android:name="com.bangkitcapstone.tipsntrip.ui.myjourney.MyJourneyFragment"
        android:label="@string/journey"
        tools:layout="@layout/fragment_my_journey" />
    <fragment

        android:id="@+id/navigation_profile"
        android:name="com.bangkitcapstone.tipsntrip.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.bangkitcapstone.tipsntrip.ui.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />
</navigation>