<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="25dp"
            android:alpha="0"
            android:src="@drawable/logo_typhography"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_welcome_title"
            style="@style/TextSpec.Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:alpha="0"
            android:text="@string/banner_home_title"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/TextSpec.Field.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:backgroundTint="@color/blue_app_darker1"
            android:drawableLeft="@drawable/ic_login_white"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/TextSpec.Field.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:alpha="0"
            android:backgroundTint="@color/blue_app_darker1"
            android:drawableLeft="@drawable/ic_new_label_white"
            android:text="@string/signup"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

    </LinearLayout>


</ScrollView>