<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.itenerary.OutputIteneraryActivity">

    <ImageView
        android:id="@+id/iv_banner_city"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_detail"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/iv_bookmark"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_bookmark_white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_banner_title"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/tv_banner_title" />

    <Button
        android:id="@+id/btn_back"
        style="@style/FloatingButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_back_button"
        android:backgroundTint="@color/blue_app_darker1"
        android:contentDescription="@string/button_back"
        android:drawableEnd="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_banner_title"
        style="@style/TextSpec.LabelAttraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_banner_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_banner_city"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

    <TextView
        android:id="@+id/tv_day_index"
        style="@style/TextSpec.Field"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue_app_darkest"
        android:gravity="center"
        android:text="@string/day_index"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner_city" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/TextSpec.Field"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_day_index"
        app:tabSelectedTextColor="@color/blue_app"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:tabTextColor="@color/blue_app_darkest" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_day"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <TextView
        android:background="@color/blue_app_darker1"
        android:textSize="12sp"
        android:id="@+id/textView3"
        android:textColor="@color/white"
        style="@style/TextSpec.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_click_instruction"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

